fix some text alignment

--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,7 @@ div.info {
 div.info>div {
   padding: 8px;
   font-weight: bold;
+  text-align: center;
 
 }
 
